# Holons

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  env.config.example  requirements.txt  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
backend/: app.py  bedrock_client.py  config.py  db.py  db_postgres.py  db_sqlite.py  engine.py  middleware.py  queue.py  schema.py  schema_sqlite.py  standalone.py  worker.py
backend/llm_clients/: __init__.py  base.py  bedrock.py  claude_native.py  gemini.py  minimax.py  openai_compat.py
backend/services/: asset_crypto.py  asset_seeds.py  assets.py  avatar.py  code_runners.py  coordinator.py  escalation.py  feature_flags.py  group_chat.py  lead_agent.py  lead_proxy.py  mcp_client.py  model_clients.py  notifications.py  project_reports.py  quotas.py  rag.py  rag_external.py  sanitize.py  scheduler.py  sharing.py  skill_extractor.py  user_quotas.py  workspaces.py
backend/services/im_channels/: __init__.py  base.py  commands.py  line.py  manager.py  router.py  slack.py  telegram.py
backend/tools/: __init__.py  current_time.py  file_delete.py  file_glob.py  file_list.py  file_read.py  file_write.py  http_get.py  run_code.py  search_skills.py
demo/: README.md  audit_ui.py  capture_assets.py  seed_demo.py  seed_more_projects.py  test_project_e2e.py
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: ConnectionSetup.tsx  DesktopApp.tsx  DesktopDialog.tsx  DesktopLogin.tsx  DesktopMessageBubble.tsx  DesktopRunStatusCard.tsx  LangSwitcher.tsx  NormalModeApp.tsx  api-adapter.ts  desktop.css  main.tsx  useNotificationBridge.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src/i18n/: en.json  index.ts  zh-TW.json
docker/: init-db.sql
docs/: ARCHITECTURE.md  BUILD.md  DEVELOPMENT.md  PROJECTS.md  design.md  features.md  implementation.md  install.md  mcp-integration.md
docs/assets/: demo-walkthrough.webm
docs/assets/videos/: 01-dialog-workflow-proposal.webm  02-group-chat.webm  03-workflow-editor.webm  04-dashboard.webm  05-library.webm
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  auth.ts  main.tsx
frontend/src/api/: client.ts
frontend/src/i18n/: en.json  (+1 more)
infra/openclaw_ec2/: .gitignore
mcp_test/: run.sh  server.py
rag_test/: run.sh  server.py
scripts/: build_peeps_svgs.py
static/: app.js  index.html  peeps.html  style.css
tests/: conftest.py  test_api_crud.py  test_e2e.py  test_group_chat_history.py  test_projects.py  test_services.py  test_v2.py
tests/regression/: README.md  conftest.py  test_agents.py  test_auth.py  test_backup.py  test_cast_layout.py  test_dashboard.py  test_im_adapter_unit.py  test_im_bindings.py  test_im_slack_line.py  test_im_webhook.py  test_lead_threads.py  test_model_client_ux.py  test_projects.py  test_schedules.py  test_search.py  test_skills.py  test_workflows.py  test_workspaces.py
(+66 files in other folders)
