[package]
name = "agent-company-desktop"
version = "1.0.0"
description = "Agent Company Desktop — floating AI agent cast bar for macOS"
authors = ["Jay"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
open = "5"

# Used on macOS to apply NSColor.clearColor + setOpaque(NO) to the
# NSWindow at startup. macOS otherwise paints its dark default
# windowBackgroundColor underneath any non-fully-opaque webview
# pixels — exactly the black halo that ringed the bust PNGs.
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
