[package]
name = "agent-company-desktop"
version = "1.0.0"
description = "Agent Company Desktop — floating AI agent cast bar for macOS"
authors = ["Jay"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
open = "5"

# Used on macOS to apply NSColor.clearColor + setOpaque(NO) to the
# NSWindow at startup. macOS otherwise paints its dark default
# windowBackgroundColor underneath any non-fully-opaque webview
# pixels — exactly the black halo that ringed the bust PNGs.
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

# The unmaintained objc 0.2 crate's `class!` / `msg_send!` macros expand
# to `#[cfg(feature = "cargo-clippy")]` checks against a feature name no
# crate declares anymore. Newer rustc warns about it, and CI runs
# `cargo clippy -- -D warnings` so the warning becomes a hard error.
# Whitelist that one cfg name so the build stays green without lowering
# the rest of the lint gate.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
